Add a link to the Angular project on API start screen

--- a/PeopleSearcher/Index.html
+++ b/PeopleSearcher/Index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Welcome to the People Searcher API</h1>
-    <p>Please start the Angular Project to use the full project</p>
+    <p>Click <a href="http://localhost:4200/">here</a> after the Angular project has been started</p>
 </body>
 </html>
