Created Readme and other minor tweaks

--- a/Angular/src/index.html
+++ b/Angular/src/index.html
@@ -9,7 +9,7 @@
  <base href="/">
 
  <meta name="viewport" content="width=device-width, initial-scale=1">
- <link rel="icon" type="image/x-icon" href="favicon.ico">
+ <link rel="icon" href="https://rmcute-people-searcher.s3.us-east-2.amazonaws.com/searcher.png">
 </head>
 <body>
  <app-root>
